add addValue option

--- a/templates/sheets/item/ability-sheet.html
+++ b/templates/sheets/item/ability-sheet.html
@@ -88,6 +88,7 @@
                 <option value="addLife">{{localize "Juink.AddLife"}}</option>
                 <option value="addHope">{{localize "Juink.AddHope"}}</option>
                 <option value="addDice">{{localize "Juink.AddDice"}}</option>
+                <option value="addValue">{{localize "Juink.AddValue"}}</option>
                 <option value="changeDice">{{localize "Juink.ChangeDice"}}</option>
                 <option value="reRollDice">{{localize "Juink.reRollDice"}}</option>
                 <option value="runMacro">{{localize "Juink.RunMacro"}}</option>
