--- a/templates/sheets/item/event-sheet.html
+++ b/templates/sheets/item/event-sheet.html
@@ -45,6 +45,7 @@
                 {{#select system.effect.type}}
                 <option value="-">-</option>
                 <option value="addDice">{{localize "Juink.AddDice"}}</option>
+                <option value="addValue">{{localize "Juink.AddValue"}}</option>
                 <option value="changeDice">{{localize "Juink.ChangeDice"}}</option>
                 <option value="reRollDice">{{localize "Juink.reRollDice"}}</option>
                 <option value="runMacro">{{localize "Juink.RunMacro"}}</option>
