bug fix of fate dice

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@
 }
 
 .juink .phone-base {
-  background: url(../assets/base.png);
+  background: url(../assets/base.PNG);
   background-size: 250%;
   background-position-x: center;
   background-position-y: center;
