--- a/templates/sheets/actor/character-sheet.html
+++ b/templates/sheets/actor/character-sheet.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="juin">
-                        <img src="systems/juink/assets/juin.png"/>
+                        <img src="systems/juink/assets/juin.PNG"/>
                         <div class="title flex">
                             <input type="text" name="system.juin.value" value="{{system.juin.value}}" placeholder="{{localize "Juink.Juin"}}" data-dtype="Number"/>
                             <span>{{localize "Juink.JuinNum"}}</span>
@@ -247,7 +247,7 @@
                 <div class="app-box">
                     <div class="application move-tab" data-tab="attributes">
                         <div class="app-icon">
-                            <img src="systems/juink/assets/profile.png" width="40">
+                            <img src="systems/juink/assets/profile.PNG" width="40">
                         </div>
                         <label>{{localize "Juink.Attributes"}}</label>
                     </div>
@@ -255,9 +255,9 @@
                     <div class="application move-tab item-usage-check" data-tab="bags">
                         <div class="app-icon">
                             {{#if system.itemUsage}}
-                            <img src="systems/juink/assets/ban.png" width="40">
+                            <img src="systems/juink/assets/ban.PNG" width="40">
                             {{else}}
-                            <img src="systems/juink/assets/bag.png" width="40">
+                            <img src="systems/juink/assets/bag.PNG" width="40">
                             {{/if}}
                         </div>
                         <label>{{localize "Juink.Bags"}}</label>
@@ -265,14 +265,14 @@
     
                     <div class="application move-tab" data-tab="address">
                         <div class="app-icon">
-                            <img src="systems/juink/assets/address.png" width="40">
+                            <img src="systems/juink/assets/address.PNG" width="40">
                         </div>
                         <label>{{localize "Juink.Address"}}</label>
                     </div>
     
                     <div class="application move-tab" data-tab="diary">
                         <div class="app-icon">
-                            <img src="systems/juink/assets/diary.png" width="40">
+                            <img src="systems/juink/assets/diary.PNG" width="40">
                         </div>
                         <label>{{localize "Juink.Diary"}}</label>
                     </div>
@@ -299,7 +299,7 @@
     
                     <div class="dice-pool">
                         {{#times system.attributes.dice.pool}}
-                        <img class="dice unchecked" src="systems/juink/assets/dice.png" width="35" height="35">
+                        <img class="dice unchecked" src="systems/juink/assets/dice.PNG" width="35" height="35">
                         {{/times}}
                     </div>
                 </div>
