--- a/templates/sheets/actor/scenario-sheet.html
+++ b/templates/sheets/actor/scenario-sheet.html
@@ -10,10 +10,10 @@
             <div class="fate-dices">
                 <div class="title">{{localize "Juink.FateDices"}}</div>
                 <div class="dice-box">
-                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[0]}}.png" data-pos="0">
-                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[1]}}.png" data-pos="1">
-                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[2]}}.png" data-pos="2">
-                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[3]}}.png" data-pos="3">
+                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[0]}}.PNG" data-pos="0">
+                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[1]}}.PNG" data-pos="1">
+                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[2]}}.PNG" data-pos="2">
+                    <img class="dice" src="systems/juink/assets/dices/{{system.dice.[3]}}.PNG" data-pos="3">
     
                     <input type="hidden" name="system.dice.0" value="{{system.dice.[0]}}" data-dtype="Number">
                     <input type="hidden" name="system.dice.1" value="{{system.dice.[1]}}" data-dtype="Number">
@@ -23,7 +23,7 @@
             </div>
 
             <div class="player">
-                <img src="systems/juink/assets/player.png">
+                <img src="systems/juink/assets/player.PNG">
                 <div class="title flex">
                     <input type="text" name="system.player" value="{{system.player}}" placeholder="{{localize "Juink.PC"}}" data-dtype="Number"/>
                     <span>{{localize "Juink.PCNum"}}</span>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="juin">
-                <img src="systems/juink/assets/juin.png"/>
+                <img src="systems/juink/assets/juin.PNG"/>
                 <div class="title flex">
                     <input type="text" name="system.juin" value="{{system.juin}}" placeholder="{{localize "Juink.Juin"}}" data-dtype="Number"/>
                     <span>{{localize "Juink.JuinNum"}}</span>
