--- a/templates/dialogs/effect-dialog.html
+++ b/templates/dialogs/effect-dialog.html
@@ -18,6 +18,9 @@
                 {{#if ../isUse}}
                 <button class="use-item">{{localize "Juink.Use"}}</button>
                 {{else}}
+                {{#ifEquals item.system.effect.value "dialog"}}
+                <input class="dialog-input" type="text" placeholder="input">
+                {{/ifEquals}}
                 <input class="use-check" type="checkbox">
                 {{/if}}
             </div>
@@ -42,6 +45,9 @@
                 {{#if ../isUse}}
                 <button class="use-item">{{localize "Juink.Use"}}</button>
                 {{else}}
+                {{#ifEquals item.system.effect.value "dialog"}}
+                <input class="dialog-input" type="text" placeholder="input">
+                {{/ifEquals}}
                 <input class="use-check" type="checkbox">
                 {{/if}}
             </div>
@@ -71,6 +77,9 @@
                 {{#if ../isUse}}
                 <button class="use-item">{{localize "Juink.Use"}}</button>
                 {{else}}
+                {{#ifEquals item.system.effect.value "dialog"}}
+                <input class="dialog-input" type="text" placeholder="input">
+                {{/ifEquals}}
                 <input class="use-check" type="checkbox">
                 {{/if}}
             </div>
